--- a/pacman.html
+++ b/pacman.html
@@ -5,207 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacman Demo</title>
-    <style>
-        body {
-            background-color: black;
-        }
-
-        /* .container{
-            margin: auto 0px;
-        }*/
-
-        div.row div {
-            width: 20px;
-            height: 20px;
-            border: 1px solid black;
-            display: inline-block;
-        }
-
-        div.brick {
-            background-color: blue;
-        }
-
-        div.coin {
-            background: url('img/coin.gif') no-repeat center;
-        }
-
-        div.pacman {
-            background: url('img/pacman.gif') no-repeat center;
-            background-size: cover;
-        }
-
-        div.empty {}
-    </style>
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="world"></div>
-        <div class="row">
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-        </div>
+    <div id="world"></div>
+    <div id="pacman" style="top: 36px; left: 32px;"></div>
 
-        <div class="row">
-            <div class="brick"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="pacman"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="brick"></div>
-        </div>
-
-        <div class="row">
-            <div class="brick"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="brick"></div>
-        </div>
-
-        <div class="row">
-            <div class="brick"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="brick"></div>
-        </div>
-        <div class="row">
-            <div class="brick"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="brick"></div>
-        </div>
-        <div class="row">
-            <div class="brick"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="brick"></div>
-        </div>
-        <div class="row">
-            <div class="brick"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="brick"></div>
-        </div>
-        <div class="row">
-            <div class="brick"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="coin"></div>
-            <div class="brick"></div>
-        </div>
-        <div class="row">
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-            <div class="brick"></div>
-        </div>
-    </div>
-
-    <script>
-        /*Objetivos:
-        1) que js muestre el mundo las vidas y el puntaje
-        2) que el pacman se mueva*/
-
-        var world = [
-                [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
-                [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2],
-        ];
-
-        function displayWorld() {
-            var output = '';
-            for (i = 0; i < world.length; i++) {
-                output += "<div class='row'>";
-                for (var j = 0; j < world[i].length; j++) {
-                    if (world[i].length == 2)
-                    output += "\n\t<div class='brick'></div>";
-                    else if (world[i].length == 1)
-                    output += "\n\t<div class='coin'></div>";
-                    if (world[i].length == 0)
-                    output += "\n\t<div class='empty'></div>";
-                    output = output + world[i][j];
-                }
-                output += "</div>"
-            }
-            console.log(output);
-            document.getElementById('world').innerHTML
-        }
-
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous"></script>
+    <script src="code.js"></script>
 </body>
 
 </html>
