--- a/pacman.html
+++ b/pacman.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
-    <div id="world"></div>
-    <div id="pacman" style="top: 36px; left: 32px;"></div>
+    <div class="container mx-auto">
+        <div id="world"></div>
+        <div id="pacman" style="top: 36px; left: 32px;"></div>
+        <div id="cherry"></div>
+        <div id="score"></div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
         integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
@@ -20,10 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
-    <script src="code.js"></script>
+    <script src='code.js'></script>
 </body>
 
 </html>
